[package]
name = "cbor-diag-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
cbor-diag = "0.1.12"
serde = { version = "1.0.171", features = ["derive"] }
futures = "0.3.28"
serde_json = "1.0.107"
fehler = "1.0.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde_derive = { version = "1.0, <1.0.172", default-features = false }

[dependencies.wasm-bindgen]
version = "0.2.87"
features = ["serde-serialize"]

[lib]
crate-type = ["cdylib"]
